# spark-optima

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
data/configs/: spark_3.0_configs.yaml  spark_3.1_configs.yaml  spark_3.2_configs.yaml  spark_3.3_configs.yaml  spark_3.4_configs.yaml  spark_3.5_configs.yaml  spark_4.0_configs.yaml  spark_4.1_configs.yaml
data/templates/: etl-batch.yaml  interactive.yaml  ml-training.yaml  streaming.yaml
docker/: Dockerfile  docker-compose.yml  spark_executor.py
docs/: changelog.md  index.md
docs/api/: core.md  optimizer.md  result.md
docs/development/: architecture.md  contributing.md  testing.md
docs/stylesheets/: extra.css
docs/user-guide/: api.md  cli.md  configuration.md  getting-started.md  installation.md  rest-api.md
examples/: README.md
examples/advanced/: bayesian_optimization.py  code_analysis.py  event_log_analysis.py  multi_objective_pareto.py  simulation_mode.py
examples/basic/: simple_optimization.py  workload_templates.py
examples/data/: generate_sample_data.py
kubernetes/: PRODUCTION.md  README.md
kubernetes/base/: configmap.yaml  deployment-api.yaml  hpa.yaml  ingress.yaml  job-cli.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  rbac.yaml  resourcequota.yaml  service-api.yaml  serviceaccount.yaml
kubernetes/helm/spark-optima/: Chart.yaml  values-production.yaml  values.yaml
kubernetes/helm/spark-optima/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
kubernetes/local-setup/: kind-config.yaml  minikube-start.sh
kubernetes/monitoring/: prometheus-values.yaml  servicemonitor.yaml
src/spark_optima/: __init__.py
src/spark_optima/analysis/: __init__.py  models.py  parser.py  recommender.py  scala_parser.py  smell_detector.py  sql_analyzer.py
src/spark_optima/api/: __init__.py  dependencies.py  job_store_redis.py  job_store_sqlite.py  jobs.py  main.py  models.py  security.py  webhooks.py
src/spark_optima/api/routes/: __init__.py  health.py  jobs.py  optimize.py  platforms.py  templates.py
src/spark_optima/cli/: __init__.py  formatters.py  main.py  wizard.py
src/spark_optima/core/: __init__.py  history.py  optimizer.py  result.py  templates.py
src/spark_optima/core/bayesian/: __init__.py  models.py  objectives.py  optimizer.py  pruners.py  search_space.py  trial_runner.py
src/spark_optima/core/config_engine/: __init__.py  database.py  loader.py  models.py  units.py  validator.py
src/spark_optima/core/execution/: __init__.py  engine.py  event_log.py  history_server.py  metrics_collector.py  monitor.py  spark_runner.py
src/spark_optima/core/heuristics/: __init__.py  context.py  engine.py  evaluator.py  rules.py
src/spark_optima/core/simulation/: __init__.py  engine.py  performance_model.py  predictor.py
src/spark_optima/data/: __init__.py  generators.py  profiler.py  samplers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_optimizer.py
tests/unit/analysis/: __init__.py  test_models.py  test_parser.py  test_recommender.py  test_scala_parser.py  test_scala_smells.py  test_smell_detector.py  test_sql_analyzer.py
tests/unit/api/: __init__.py  test_dependencies.py  test_job_progress.py  test_job_store_redis.py  test_job_store_sqlite.py  test_jobs.py  test_main.py  test_models.py  test_security.py  test_webhooks.py
tests/unit/api/routes/: test_health.py  test_jobs_endpoints.py  test_jobs_events.py  test_optimize.py  test_optimize_webhooks.py  test_platforms.py  test_templates_endpoints.py
tests/unit/cli/: __init__.py  test_formatters.py  test_main.py  test_wizard.py
tests/unit/core/: test_history.py  test_optimizer.py  test_result.py  test_templates.py
tests/unit/core/bayesian/: __init__.py  test_models.py  test_objectives.py  test_optimizer.py  test_pruners.py  test_pruners_coverage.py  test_search_space.py  test_trial_runner.py
tests/unit/core/config_engine/: __init__.py  test_database.py  test_database_full_coverage.py  test_loader.py  test_models.py  test_validator.py
tests/unit/core/execution/: __init__.py  test_engine.py  test_event_log.py  test_history_server.py  test_metrics_collector.py  test_monitor.py  test_spark_runner.py
tests/unit/core/heuristics/: __init__.py  test_context.py  test_engine.py  test_evaluator.py  test_rules.py
tests/unit/core/simulation/: __init__.py  test_engine.py  test_performance_model.py  test_predictor.py
tests/unit/data/: __init__.py  test_generators.py  test_profiler.py  test_samplers.py
