[project]
name = "spark-optima"
version = "0.1.0"
description = "Intelligent Apache Spark configuration optimization tool"
authors = [
    {name = "Spark Optima Contributors"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["spark", "optimization", "configuration", "big-data", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0,<3.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "optuna>=4.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "astor>=0.8.1",
    "psutil>=6.1.0",
    "numpy>=2.0.0",
    "tqdm>=4.67.0",
    "click>=8.1.0",
    "importlib-resources>=6.5.0",
    "pyspark>=4.1.1",
    "joblib>=1.4.0",
    "sqlglot>=30.10.0",
    "httpx>=0.28.1",
]

[project.scripts]
spark-optima = "spark_optima.cli.main:app"
spark-optima-api = "spark_optima.api.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "scikit-learn>=1.4.0",
    "bandit>=1.8.0",
    "types-pyyaml>=6.0.12.20260518",
    "types-psutil>=7.2.2.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_optima"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "TCH",           # flake8-type-checking
]
ignore = ["E501"]  # line too long handled by formatter

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
# Optional/untyped third-party dependencies without stubs
module = [
    "boto3.*",
    "botocore.*",
    "sklearn.*",
    "joblib.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # assert_used — acceptable in tests

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
